Base power use + Draw code

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -302,12 +302,12 @@ stat.pm-multi-recipe = [accent]Recipe {0}:
 
 stat.pm-powersecondblock = power units/second/block boosted
 
-pm-fuel = [lightgray]Fuel:
-pm-fuel.input = [stat]{0}[lightgray] added per item
-pm-fuel.use = [stat]{0}[lightgray] used per craft
-pm-fuel.capacity = [stat]{0}[lightgray] capacity
-### The extra space is deliberate
-pm-fuel.affinity = [stat]Affinities: 
+stat.pm-fuel = [lightgray]Fuel:
+stat.pm-fuel.input = [stat]{0}[lightgray] added per item
+stat.pm-fuel.use = [stat]{0}[lightgray] used per craft
+stat.pm-fuel.capacity = [stat]{0}[lightgray] capacity
+### The extra space is intentional
+stat.pm-fuel.affinity = [stat]Affinities: 
 
 stat.pm-products = Products
 
@@ -326,6 +326,7 @@ bullet.pm-suction-radius = [stat]{0}[lightgray] tile suction radius
 
 bullet.pm-attraction-radius = [stat]{0}[lightgray] attraction force ~ [stat]{1}[lightgray] tiles
 
+### The extra space is intentional
 bullet.pm-sentry-spawn = [lightgray]Spawns 
 
 bullet.pm-splits = [stat]{0}[lightgray]x split bullets:
@@ -357,6 +358,9 @@ pm-drone-pad-charge = Drone Charge
 pm-drone-charge = Charge
 pm-drone-use-construct = [lightgray]Drone Construction:
 pm-drone-use-recharge = [lightgray]Drone Recharge:
+
+pm-poweruse = [lightgray]Power Use: {0}/sec
+pm-overdrivedcount = [lightgray]({0} overdrived blocks)
 
 ## Settings
 
