Rework system booster extra power use

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -290,7 +290,7 @@ bar.pm-fuel = Fuel: {0}{1}
 bar.pm-fuel-unneeded = Not required
 bar.pm-fuel-use = Fuel per craft: {0}
 
-bar.pm-totalboost = Boost: +{0}% ({1} boosters)
+bar.pm-totalboost = Total Boost: +{0}%
 
 stat.pm-sentry-lifetime = [lightgray]([stat]{0}[lightgray] second lifetime)
 
@@ -300,7 +300,7 @@ stat.pm-static-power = {0} power units/second per link
 
 stat.pm-multi-recipe = [accent]Recipe {0}:
 
-stat.pm-powersecondblock = power units/second/block boosted
+stat.pm-powersecondblock ={0}% power use of each block overdrived
 
 stat.pm-fuel = [lightgray]Fuel:
 stat.pm-fuel.input = [stat]{0}[lightgray] added per item
@@ -360,6 +360,7 @@ pm-drone-use-construct = [lightgray]Drone Construction:
 pm-drone-use-recharge = [lightgray]Drone Recharge:
 
 pm-poweruse = [lightgray]Power Use: {0}/sec
+pm-boostercount = [lightgray]({0} boosters)
 pm-overdrivedcount = [lightgray]({0} overdrived blocks)
 
 ## Settings
