--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -43,7 +43,7 @@ block.prog-mats-miinigun.name = M-II-nigun
 block.prog-mats-miinigun.description = Two is better than one.\n\n[orange]Overdrive, reload multiplier, and coolant affect how fast it spins up. Reload multiplier affects max firing speed.
 block.prog-mats-mivnigun.name = M-IV-nigun
 block.prog-mats-mivnigun.description = "Too much" simply doesn't exist in my dictionary.\n\n[orange]Overdrive, reload multiplier, and coolant affect how fast it spins up. Reload multiplier affects max firing speed.
-block.prog-mats-mivnigun.details = Dom't ask me to make a "M-VIII-nigun."
+block.prog-mats-mivnigun.details = Don't ask me to make a "M-VIII-nigun."
 
 ## Geomancy
 block.prog-mats-concretion.name = Concretion
@@ -149,9 +149,9 @@ block.prog-mats-caliber.details = Random crits are fair and balanced.
 
 ## Tesla
 block.prog-mats-shock.name = [#F3E979]Shock
-block.prog-mats-shock.description = Zaps random targets in range.
+block.prog-mats-shock.description = Zaps a few random targets in range.
 block.prog-mats-spark.name = [#F3E979]Spark
-block.prog-mats-spark.description = Zaps multiple random targets in range.
+block.prog-mats-spark.description = Zaps many random targets in range.
 block.prog-mats-storm.name = [#F3E979]Storm
 block.prog-mats-storm.description = Zaps numerous random targets in range.
 
