Slightly increase boost amount and power use
~~At this point I might just give up trying to balance this.~~

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -300,7 +300,7 @@ stat.pm-static-power = {0} power units/second per link
 
 stat.pm-multi-recipe = [accent]Recipe {0}:
 
-stat.pm-powersecondblock ={0}% power use of each block overdrived
+stat.pm-powersecondblock = {0}% power requirement of each block overdrived
 
 stat.pm-fuel = [lightgray]Fuel:
 stat.pm-fuel.input = [stat]{0}[lightgray] added per item
