--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -188,6 +188,11 @@ block.prog-mats-fence.name = Fence
 block.prog-mats-fence.description = Discharges energy between linked nodes, damaging enemy units along the way.\nDoes not transmit power.\nPower both sides to double effects.\n\nHas longer range and more damage, but less connections.
 block.prog-mats-web.name = Web
 block.prog-mats-web.description = Discharges energy between linked nodes, damaging enemy units along the way.\nDoes not transmit power.\nPower both sides to double effects.\n\nHas shorter range and less damage, but more connections.
+
+block.prog-mats-system-booster.name = Overdrive Diffusion
+block.prog-mats-system-booster.description = Increases the speed of buildings connected to its power network.\nStacks with other overdrive diffusions in the same network.
+block.prog-mats-system-booster.details = Use of this recommends that blocks that do not use power be replaced with ones that do.
+
 block.prog-mats-shield-projector.name = Shield Projector
 block.prog-mats-shield-projector.description = Creates a square force field around itself, protecting buildings and units inside from damage.\nOverheats if too much damage is sustained. Optionally uses coolant to prevent overheating. Phase fabric and tenelium used together increase shield size.\nUnlike normal force projectors, this regenerates in bursts.\n\n[orange]Capable of blocking [red]arc missiles[].
 block.prog-mats-shield-projector.details = It's a square instead of a hexagon because I'm too lazy to calculate the right radius to make it fit alight perfectly.
@@ -300,7 +305,7 @@ stat.pm-static-power = {0} power units/second per link
 
 stat.pm-multi-recipe = [accent]Recipe {0}:
 
-stat.pm-powersecondblock = {0}% power requirement of each block overdrived
+stat.pm-powersecondblock = {0}% power requirement of overdrived blocks
 
 stat.pm-fuel = [lightgray]Fuel:
 stat.pm-fuel.input = [stat]{0}[lightgray] added per item
