--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -189,8 +189,8 @@ block.prog-mats-fence.description = Discharges energy between linked nodes, dama
 block.prog-mats-web.name = Web
 block.prog-mats-web.description = Discharges energy between linked nodes, damaging enemy units along the way.\nDoes not transmit power.\nPower both sides to double effects.\n\nHas shorter range and less damage, but more connections.
 
-block.prog-mats-system-booster.name = Overdrive Diffusion
-block.prog-mats-system-booster.description = Increases the speed of buildings connected to its power network.\nStacks with other overdrive diffusions in the same network.
+block.prog-mats-system-booster.name = Overdrive Diffuser
+block.prog-mats-system-booster.description = Increases the speed of buildings connected to its power network.\nStacks with other overdrive diffusers in the same network.
 block.prog-mats-system-booster.details = Use of this recommends that blocks that do not use power be replaced with ones that do.
 
 block.prog-mats-shield-projector.name = Shield Projector
