Bundles, Build Cost, and Research

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -184,6 +184,9 @@ unit.prog-mats-drone.details = Sprite by Flin.
 
 # Effect
 
+block.prog-mats-core-covalence.name = Core: Covalence
+block.prog-mats-core-covalence.description = Not an actual core, but rather a link for teleporting items to and from the core of the base. Does not add core storage capacity.\nRequires large amounts of power to run.
+
 block.prog-mats-fence.name = Fence
 block.prog-mats-fence.description = Discharges energy between linked nodes, damaging enemy units along the way.\nDoes not transmit power.\nPower both sides to double effects.\n\nHas longer range and more damage, but less connections.
 block.prog-mats-web.name = Web
