--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -164,7 +164,7 @@ block.prog-mats-apotheosis-charger.description = Fires a laser at an [#CE5EE5]Ap
 # Distribution
 
 block.prog-mats-floating-conveyor.name = Hydroconveyor
-block.prog-mats-floating-conveyor.description = Transports items forward. Faster than standard conveyors, but slower than titanium conveyors. Can be placed in deep liquids.
+block.prog-mats-floating-conveyor.description = Transports items forward. Slightly faster than a standard conveyor. Can be placed in deep liquids.
 block.prog-mats-burst-driver.name = Burst Driver
 block.prog-mats-burst-driver.description = Long-range item transport structure. Fires massive long bursts of items to other burst drivers.\nSingular items are lighter than a large amount bunched together, so it's range and speed are faster than mass drivers.
 
