--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -80,12 +80,12 @@ block.prog-mats-sentinel.description = Fires powerful energy blasts with a massi
 block.prog-mats-sentinel.details = Anxiety piano not included.
 
 ## Sword
-block.prog-mats-masquerade.name = [violet]Ball
-block.prog-mats-masquerade.description = Controls a ring of flying swords to stab enemies.
-block.prog-mats-masquerade.details = Sword opacity setting can be found at the bottom of the graphics settings.
-block.prog-mats-violet.name = [violet]Masquerade
-block.prog-mats-violet.description = Controls a ring of giant flying swords to stab enemies.
-block.prog-mats-violet.details = Sword opacity setting can be found at the bottom of the graphics settings.
+block.prog-mats-dance.name = [violet]Dance
+block.prog-mats-dance.description = Controls a ring of flying swords to stab enemies.
+block.prog-mats-dance.details = Sword opacity setting can be found in PM settings.
+block.prog-mats-ball.name = [violet]Ball
+block.prog-mats-ball.description = Controls a ring of large flying swords to stab enemies.
+block.prog-mats-ball.details = Sword opacity setting can be found in PM settings.
 
 ## bUiLdIn A sEnTrY
 block.prog-mats-tinker.name = [gold]Sergeant
