--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,7 @@ jar{
 task alphableed doFirst{
     exec{
         workingDir "$rootDir"
+        ignoreExitValue = true
 
         println "Alpha-bleeding sprites..."
         if(System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows")){
