Sprite by Memedustry

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -87,6 +87,10 @@ block.prog-mats-ball.name = [violet]Ball
 block.prog-mats-ball.description = Controls a ring of large flying swords to stab enemies.
 block.prog-mats-ball.details = Sword opacity setting can be found in PM settings.
 
+## Anime Sweep Laser
+block.prog-mats-incision.name = Incision
+block.prog-mats-incision.destails = Sprite by Memedustry
+
 ## bUiLdIn A sEnTrY
 block.prog-mats-tinker.name = [gold]Sergeant
 block.prog-mats-tinker.description = Launches strong sentry units that expire after a duration.
@@ -391,9 +395,10 @@ mod.prog-mats-contributor.3 = [#FCC21B]Ilya246[] (Luminocity damage ramping)
 mod.prog-mats-contributor.4 = [#FCC21B]Kapzduke[] (Tinker sprites)
 mod.prog-mats-contributor.5 = [#FCC21B]TheMalaysianDude[] (Missile assembler resprite)
 mod.prog-mats-contributor.6 = [#FCC21B]Flin[] (Drone resprite)
-mod.prog-mats-contributor.7 = [#FCC21B]GlennFolker[] (Alphableeder)
-mod.prog-mats-contributor.8 = [#FCC21B]lordReddx[] (RU Translation)
-mod.prog-mats-contributor.9 = [#FCC21B]Jwiggs[] (Rocket sound from IIslands of War)
-mod.prog-mats-contributor.10 = Some sounds from [#FCC21B]Freesound[].
-mod.prog-mats-contributor.11 = Anyone I stole code from.
+mod.prog-mats-contributor.7 = [#FCC21B]Memedustry[] (Incision sprite)
+mod.prog-mats-contributor.8 = [#FCC21B]GlennFolker[] (Alphableeder)
+mod.prog-mats-contributor.9 = [#FCC21B]lordReddx[] (RU Translation)
+mod.prog-mats-contributor.10 = [#FCC21B]Jwiggs[] (Rocket sound from IIslands of War)
+mod.prog-mats-contributor.11 = Some sounds from [#FCC21B]Freesound[].
+mod.prog-mats-contributor.12 = Anyone I stole code from.
 mod.prog-mats.description = Progressed Materials, but in Java. My main mod, which mostly just adds turrets. I'm just experimenting to see what I can do with the power I hold.\n\nThe name definitely isn't made of the synonyms of "Advance" and "Content".
