--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -89,7 +89,10 @@ block.prog-mats-ball.details = Sword opacity setting can be found in PM settings
 
 ## Anime Sweep Laser
 block.prog-mats-incision.name = Incision
-block.prog-mats-incision.destails = Sprite by Memedustry
+block.prog-mats-incision.description = Draws lasers across the floor that explode after a short delay.
+block.prog-mats-incision.details = Sprite by Memedustry
+block.prog-mats-fissure.name = Fissure
+block.prog-mats-fissure.description = Splits space-time to deal heavy damage to enemies.
 
 ## bUiLdIn A sEnTrY
 block.prog-mats-tinker.name = [gold]Sergeant
@@ -215,8 +218,13 @@ block.prog-mats-everything-gun.details = Ilya helped me with the increase damage
 block.prog-mats-omega-charger.name = [#CE5EE5]Apotheosis Omega Charger
 block.prog-mats-omega-charger.description = Fires a laser at an [#CE5EE5]Apotheosis[] to give it an [lime]OMEGA[] boost in power.\nNote: Has diminishing returns.\nSandbox only.
 
+block.prog-mats-everything-item-source.name = Omega Item Source
+block.prog-mats-everything-item-source.description = Infinitely outputs all items at once. Sandbox only.
 block.prog-mats-sand-driver.name = Sand Driver
 block.prog-mats-sand-driver.description = Long-range item generation structure. Fires massive long bursts of items to other burst drivers.\nMagically creates and fires random items.\nSandbox only.
+
+block.prog-mats-everything-liquid-source.name = Omega Liquid Source
+block.prog-mats-everything-liquid-source.description = Infinitely outputs all liquids at once. Sandbox only.
 
 block.prog-mats-rainbow-power-node.name = Rainbow Power Node
 block.prog-mats-rainbow-power-node.description = Better than the average power node. Also is rainbowy.\nSandbox only.
