--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -93,6 +93,7 @@ block.prog-mats-incision.description = Draws lasers across the floor that explod
 block.prog-mats-incision.details = Sprite by Memedustry
 block.prog-mats-fissure.name = Fissure
 block.prog-mats-fissure.description = Splits space-time to deal heavy damage to enemies.
+block.prog-mats-fissure.details = I'm gonna assume you're surprised that this thing is small and doesn't actually deal a lot of damage.
 
 ## bUiLdIn A sEnTrY
 block.prog-mats-tinker.name = [gold]Sergeant
