--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -357,6 +357,8 @@ bullet.pm-continuoussplashdamage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}
 bullet.pm-bombs-single = [stat]1[lightgray] bomb bullet/block:
 bullet.pm-bombs = [stat]{0}[lightgray] bomb bullets/block:
 
+bullet.pm-multi-splash = [stat]{0}[lightgray]x [stat]{1}[lightgray] area dmg ~ [stat]{2}[lightgray] tiles
+
 ##Block-specific Info
 
 pm-missing-research = [red]<Research Missing>
@@ -392,7 +394,6 @@ setting.pm-strobespeed.name = Sandbox Block Strobe Speed
 setting.pm-tesla-range.name = Display Tesla Range When Attacking
 setting.pm-farting.name = Replace many sounds with wind3.ogg
 setting.pm-farting.description = Restart required to apply changes.
-
 
 ## Mod
 
