Make swords red | Slight reorder

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -80,10 +80,10 @@ block.prog-mats-sentinel.description = Fires powerful energy blasts with a massi
 block.prog-mats-sentinel.details = Anxiety piano not included.
 
 ## Sword
-block.prog-mats-dance.name = [violet]Dance
+block.prog-mats-dance.name = [crimson]Dance
 block.prog-mats-dance.description = Controls a ring of flying swords to stab enemies.
 block.prog-mats-dance.details = Sword opacity setting can be found in PM settings.
-block.prog-mats-ball.name = [violet]Ball
+block.prog-mats-ball.name = [crimson]Ball
 block.prog-mats-ball.description = Controls a ring of large flying swords to stab enemies.
 block.prog-mats-ball.details = Sword opacity setting can be found in PM settings.
 
