--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -311,6 +311,8 @@ bar.pm-fuel = Fuel: {0}{1}
 bar.pm-fuel-unneeded = Not required
 bar.pm-fuel-use = Fuel per craft: {0}
 
+bar.pm-craft-speed = Craft Speed: {0}%
+
 bar.pm-totalboost = Total Boost: +{0}%
 
 stat.pm-sentry-lifetime = [lightgray]([stat]{0}[lightgray] second lifetime)
