--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -391,7 +391,8 @@ pm-overdrivedcount = [lightgray]({0} overdrived blocks)
 ## Settings
 
 setting.pm-title = Progressed Materials
-setting.pm-swordopacity.name = Sword Opacity
+setting.pm-sword-opacity.name = Sword Opacity
+setting.pm-zone-opacity.name = Zone Opacity
 setting.pm-strobespeed.name = Sandbox Block Strobe Speed
 setting.pm-tesla-range.name = Display Tesla Range When Attacking
 setting.pm-farting.name = Replace many sounds with wind3.ogg
