--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -169,6 +169,11 @@ block.prog-mats-apotheosis-nexus.description = Fires a devastating laser into th
 block.prog-mats-apotheosis-charger.name = [#CE5EE5]Apotheosis Charge Tower
 block.prog-mats-apotheosis-charger.description = Fires a laser at an [#CE5EE5]Apotheosis[] to give it a major boost in power.\nNote: Has diminishing returns.
 
+# Drills
+
+block.prog-mats-smart-drill.name = Smart Drill
+block.prog-mats-smart-drill.description = A fast drill. What it mines can be selected. Requires power.
+
 # Distribution
 
 block.prog-mats-floating-conveyor.name = Hydroconveyor
@@ -189,6 +194,15 @@ block.prog-mats-drone-station-payloads.description = A station that a transport 
 unit.prog-mats-drone.name = Taurus
 unit.prog-mats-drone.description = Consumes power to transport materials between stations configured in its drone pad. Returns to recharge automatically.\n[red]Dies if it runs out of power.[]
 unit.prog-mats-drone.details = Sprite by Flin.
+
+# Units
+
+block.prog-mats-rejuvenation-beacon.name = Rejuvenation Beacon
+block.prog-mats-rejuvenation-beacon.description = Repairs all damaged units in a radius around it.
+block.prog-mats-speed-field.name = Speed Zone
+block.prog-mats-speed-field.description = Boosts the movement and reload speed of all units in a radius around it.
+block.prog-mats-strength-emitter.name = Strength Emitter
+block.prog-mats-strength-emitter.description = Boosts the damage of all units in a radius around it.
 
 # Effect
 
@@ -294,6 +308,8 @@ status.prog-mats-disassembly.name = Disassembly
 status.prog-mats-weaken.name = Weakened
 status.prog-mats-corvus-19.name = Corvus-19
 status.prog-mats-corvus-19.details = lmao
+status.prog-mats-speed-boost.name = Speed Boost
+status.prog-mats-strength-boost.name = Damage Boost
 
 ## Stats and stuff
 
