Module Info Menu

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -95,6 +95,37 @@ block.prog-mats-fissure.name = Fissure
 block.prog-mats-fissure.description = Splits space-time to deal heavy damage to enemies.
 block.prog-mats-fissure.details = I'm gonna assume you're surprised that this thing is small and doesn't actually deal a lot of damage.
 
+## Modular Turret
+block.prog-mats-council.name = Council
+block.prog-mats-council.description =
+block.prog-mats-congress.name = Congress
+block.prog-mats-congress.description =
+block.prog-mats-pantheon.name = Pantheon
+block.prog-mats-pantheon.description =
+### Modules (Small)
+block.prog-mats-mini-overdrive.name = Overclocker
+block.prog-mats-mini-overdrive.description =
+block.prog-mats-shrapnel.name = Shrapnel
+block.prog-mats-shrapnel.description =
+block.prog-mats-froth.name = Froth
+block.prog-mats-froth.description =
+block.prog-mats-bifurcation.name = Bifurcation
+block.prog-mats-bifurcation.description =
+### Modules (Medium)
+block.prog-mats-blunderbuss.name = Blunderbuss
+block.prog-mats-blunderbuss.description =
+block.prog-mats-airburst.name = Airburst
+block.prog-mats-airburst.description =
+block.prog-mats-vulcan.name = Vulcan
+block.prog-mats-vulcan.description =
+block.prog-mats-gravity.name = Gravity
+block.prog-mats-gravity.description =
+### Modules (Large)
+block.prog-mats-trifecta.name = Trifecta
+block.prog-mats-trifecta.description =
+block.prog-mats-jupiter.name = Jupiter
+block.prog-mats-jupiter.description = hehe big bullet go br
+
 ## bUiLdIn A sEnTrY
 block.prog-mats-tinker.name = [gold]Sergeant
 block.prog-mats-tinker.description = Launches strong sentry units that expire after a duration.
@@ -403,6 +434,10 @@ pm-drone-use-recharge = [lightgray]Drone Recharge:
 pm-poweruse = [lightgray]Power Use: {0}/sec
 pm-boostercount = [lightgray]({0} boosters)
 pm-overdrivedcount = [lightgray]({0} overdrived blocks)
+
+pm-size.small = S
+pm-size.medium = M
+pm-size.large = L
 
 ## Settings
 
