Module Swapping/Reordering
***oh my god it actually works***

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -435,9 +435,13 @@ pm-poweruse = [lightgray]Power Use: {0}/sec
 pm-boostercount = [lightgray]({0} boosters)
 pm-overdrivedcount = [lightgray]({0} overdrived blocks)
 
-pm-size.small = S
-pm-size.medium = M
-pm-size.large = L
+pm-module-dialog = Swap Modules
+pm-size.small.short = S
+pm-size.small.full = Small:
+pm-size.medium.short = M
+pm-size.medium.full = Medium:
+pm-size.large.short = L
+pm-size.large.full = Large:
 
 ## Settings
 
