--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -103,14 +103,16 @@ block.prog-mats-congress.description =
 block.prog-mats-pantheon.name = Pantheon
 block.prog-mats-pantheon.description =
 ### Modules (Small)
-block.prog-mats-mini-overdrive.name = Overclocker
-block.prog-mats-mini-overdrive.description =
 block.prog-mats-shrapnel.name = Shrapnel
 block.prog-mats-shrapnel.description =
 block.prog-mats-froth.name = Froth
 block.prog-mats-froth.description =
 block.prog-mats-bifurcation.name = Bifurcation
 block.prog-mats-bifurcation.description =
+block.prog-mats-bandage.name = Bandage
+block.prog-mats-bandage.description =
+block.prog-mats-mini-overdrive.name = Overclocker
+block.prog-mats-mini-overdrive.description =
 ### Modules (Medium)
 block.prog-mats-blunderbuss.name = Blunderbuss
 block.prog-mats-blunderbuss.description =
