--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -438,6 +438,10 @@ pm-boostercount = [lightgray]({0} boosters)
 pm-overdrivedcount = [lightgray]({0} overdrived blocks)
 
 pm-module-dialog = Swap Modules
+pm-pickup.label = Pick Up Module
+pm-pickup.invalid = [red]Not a payload unit!
+pm-pickup.full = [red]Not enough capactiy left to pickup the module!
+pm-pickup.toofar = [red]Too far from module!
 pm-size.small.short = S
 pm-size.small.full = Small:
 pm-size.medium.short = M
