--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -437,7 +437,7 @@ pm-poweruse = [lightgray]Power Use: {0}/sec
 pm-boostercount = [lightgray]({0} boosters)
 pm-overdrivedcount = [lightgray]({0} overdrived blocks)
 
-pm-module-dialog = Swap Modules
+pm-swap.title = Swap Modules
 pm-pickup.label = Pick Up Module
 pm-pickup.invalid = [red]Not a payload unit!
 pm-pickup.full = [red]Not enough capactiy left to pickup the module!
