Lotus Sprites and Effects

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -120,6 +120,8 @@ block.prog-mats-airburst.name = Airburst
 block.prog-mats-airburst.description =
 block.prog-mats-vulcan.name = Vulcan
 block.prog-mats-vulcan.description =
+block.prog-mats-iris.name = Lotus
+block.prog-mats-iris.description =
 block.prog-mats-gravity.name = Gravity
 block.prog-mats-gravity.description =
 ### Modules (Large)
