--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -98,10 +98,13 @@ block.prog-mats-fissure.details = I'm gonna assume you're surprised that this th
 ## Modular Turret
 block.prog-mats-council.name = Council
 block.prog-mats-council.description =
+block.prog-mats-council.details = Sprite by BlueWolf
 block.prog-mats-congress.name = Congress
 block.prog-mats-congress.description =
+block.prog-mats-congress.details = Sprite by BlueWolf
 block.prog-mats-pantheon.name = Pantheon
 block.prog-mats-pantheon.description =
+block.prog-mats-pantheon.details = Sprite by BlueWolf
 ### Modules (Small)
 block.prog-mats-shrapnel.name = Shrapnel
 block.prog-mats-shrapnel.description =
@@ -472,7 +475,7 @@ mod.prog-mats-contributor.4 = [#FCC21B]Kapzduke[] (Tinker sprites)
 mod.prog-mats-contributor.5 = [#FCC21B]TheMalaysianDude[] (Missile assembler resprite)
 mod.prog-mats-contributor.6 = [#FCC21B]Flin[] (Drone resprite)
 mod.prog-mats-contributor.7 = [#FCC21B]Memedustry[] (Incision sprite)
-mod.prog-mats-contributor.8 = [#FCC21B]GlennFolker[] (Alphableeder)
+mod.prog-mats-contributor.8 = [#FCC21B]BlueWolf[] (Modular Turret bases)
 mod.prog-mats-contributor.9 = [#FCC21B]lordReddx[] (RU Translation)
 mod.prog-mats-contributor.10 = Some sounds from [#FCC21B]Freesound[].
 mod.prog-mats-contributor.11 = Anyone I stole code from.
