ReloadTurretModule intermediate class
For later use

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -461,7 +461,7 @@ setting.pm-sword-opacity.name = Sword Opacity
 setting.pm-zone-opacity.name = Zone Opacity
 setting.pm-strobespeed.name = Sandbox Block Strobe Speed
 setting.pm-tesla-range.name = Display Tesla Range When Attacking
-setting.pm-farting.name = Replace many sounds with wind3.ogg
+setting.pm-farting.name = Replace many sounds with wind3.ogg (extremely funny)
 setting.pm-farting.description = Restart required to apply changes.
 
 ## Mod
