--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -419,6 +419,7 @@ bullet.pm-multi-splash = [stat]{0}[lightgray]x [stat]{1}[lightgray] area dmg ~ [
 
 pm-missing-research = [red]<Research Missing>
 pm-infinity = Infinity
+pm-everything = Everything
 
 pm-apotheosis-chargers = Chargers: {0}
 pm-apotheosis-none = No chargers connected
