--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -299,6 +299,8 @@ block.prog-mats-god-factory.description = Produces Death.\nSandbox only.
 block.prog-mats-god-factory.details = godhood.exe
 block.prog-mats-cap-block.name = Unit Cap Increaser
 block.prog-mats-cap-block.description = Increases unit cap.\nSandbox only.
+block.prog-mats-harmacist.name = Harmacist
+block.prog-mats-harmacist.description = Nukes nearby enemy units to death.\nSandbox only.
 
 block.prog-mats-multi-source.name = Dual Source
 block.prog-mats-multi-source.description = Infinitely outputs items and liquids.\nSandbox only.
