--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -142,11 +142,11 @@ block.prog-mats-tinker.description = Launches strong sentry units that expire af
 block.prog-mats-tinker.details = Original sprite by Kapzduke. Slighly edited by me in the Payload Update.
 ### Ammo payloads
 block.prog-mats-basic-sentry.name = Basic Sentry
-block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.\nOnly placeable in sandbox.
+block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.
 block.prog-mats-strike-sentry.name = Missile Sentry
-block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.\nOnly placeable in sandbox.
+block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.
 block.prog-mats-dash-sentry.name = Dash Sentry
-block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.\nOnly placeable in sandbox.
+block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.
 
 ## Rocket
 block.prog-mats-arbalest.name = [gold]Arbalest
@@ -176,16 +176,18 @@ block.prog-mats-arbiter.details = On July 16, 1945, the first ever nuclear bomb 
 block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty missile shell.
 block.prog-mats-basic-missile.name = Basic Missile
-block.prog-mats-basic-missile.description = Explodes on landing, dealing a lot of damage.\nUsed by [red]strikedown[] missile turrets as ammo.\nOnly placeable in sandbox.
+block.prog-mats-basic-missile.description = Explodes on landing, dealing a lot of damage.\nUsed by [red]strikedown[] missile turrets as ammo.
 block.prog-mats-recursive-missile.name = Recursive Missile
-block.prog-mats-recursive-missile.description = Explodes on landing, dealing a lot of damage. Releases weaker versions of itself before landing. Can do this up to 2 times.\nUsed by [red]strikedown[] missile turrets as ammo.\nOnly placeable in sandbox.
+block.prog-mats-recursive-missile.description = Explodes on landing, dealing a lot of damage. Releases weaker versions of itself before landing. Can do this up to 2 times.\nUsed by [red]strikedown[] missile turrets as ammo.
 block.prog-mats-empty-nuke.name = Nuclear Missile Shell
 block.prog-mats-empty-nuke.description = An empty nuclear missile shell.
 block.prog-mats-basic-nuke.name = Basic Nuke
-block.prog-mats-basic-nuke.description = Explodes on landing, dealing a ton of damage.\nUsed by [red]trinity[] missile turrets as ammo.\nOnly placeable in sandbox.
+block.prog-mats-basic-nuke.description = Explodes on landing, dealing a ton of damage.\nUsed by [red]trinity[] missile turrets as ammo.
 block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
 block.prog-mats-cluster-nuke.name = Cluster Nuke
-block.prog-mats-cluster-nuke.description = Splits before landing, creating multiple impacts that deal a lot of damage.\nUsed by [red]trinity[] missile turrets as ammo.\nOnly placeable in sandbox.
+block.prog-mats-cluster-nuke.description = Splits before landing, creating multiple impacts that deal a lot of damage.\nUsed by [red]trinity[] missile turrets as ammo.
+block.prog-mats-send-help.name = Sandbox Nuke
+block.prog-mats-send-help.description = Here comes the [red]B I G   B O O M[].\nUsed by [red]trinity[] missile turrets as ammo.\nSandbox only.
 
 ## Pixel
 block.prog-mats-bit.name = [pink]Pixel
