--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -130,7 +130,7 @@ block.prog-mats-gravity.description =
 ### Modules (Large)
 block.prog-mats-rebound.name = Rebound
 block.prog-mats-rebound.description =
-block.prog-mats-rebound.details = Based on sprite by Poly
+block.prog-mats-rebound.details = Sprite by BlueWolf
 block.prog-mats-trifecta.name = Trifecta
 block.prog-mats-trifecta.description =
 block.prog-mats-jupiter.name = Jupiter
@@ -483,9 +483,8 @@ mod.prog-mats-contributor.4 = [#FCC21B]Kapzduke[] (Tinker sprites)
 mod.prog-mats-contributor.5 = [#FCC21B]TheMalaysianDude[] (Missile assembler resprite)
 mod.prog-mats-contributor.6 = [#FCC21B]Flin[] (Drone resprite)
 mod.prog-mats-contributor.7 = [#FCC21B]Memedustry[] (Incision sprite)
-mod.prog-mats-contributor.8 = [#FCC21B]BlueWolf[] (Modular Turret bases)
-mod.prog-mats-contributor.9 = [#FCC21B]Poly[] (Rebound sprite)
-mod.prog-mats-contributor.10 = [#FCC21B]lordReddx[] (RU Translation)
-mod.prog-mats-contributor.11 = Some sounds from [#FCC21B]Freesound[].
-mod.prog-mats-contributor.12 = Anyone I stole code from.
+mod.prog-mats-contributor.8 = [#FCC21B]BlueWolf[] (Modular Turret bases and Rebound sprites)
+mod.prog-mats-contributor.9 = [#FCC21B]lordReddx[] (RU Translation)
+mod.prog-mats-contributor.10 = Some sounds from [#FCC21B]Freesound[].
+mod.prog-mats-contributor.11 = Anyone I stole code from.
 mod.prog-mats.description = Progressed Materials, but in Java. My main mod, which mostly just adds turrets. I'm just experimenting to see what I can do with the power I hold.\n\nThe name definitely isn't made of the synonyms of "Advance" and "Content".
