--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -127,6 +127,8 @@ block.prog-mats-iris.name = Lotus
 block.prog-mats-iris.description =
 block.prog-mats-gravity.name = Gravity
 block.prog-mats-gravity.description =
+block.prog-mats-ambrosia.name = Ambrosia
+block.prog-mats-ambrosia.description =
 ### Modules (Large)
 block.prog-mats-rebound.name = Rebound
 block.prog-mats-rebound.description =
@@ -135,6 +137,8 @@ block.prog-mats-trifecta.name = Trifecta
 block.prog-mats-trifecta.description =
 block.prog-mats-jupiter.name = Jupiter
 block.prog-mats-jupiter.description = hehe big bullet go br
+block.prog-mats-dispel.name = Dispel
+block.prog-mats-dispel.description =
 
 ## bUiLdIn A sEnTrY
 block.prog-mats-tinker.name = [gold]Sergeant
@@ -257,7 +261,7 @@ block.prog-mats-fence.description = Discharges energy between linked nodes, dama
 block.prog-mats-web.name = Web
 block.prog-mats-web.description = Discharges energy between linked nodes, damaging enemy units along the way.\nDoes not transmit power.\nPower both sides to double effects.\n\nHas shorter range and less damage, but more connections.
 
-block.prog-mats-system-booster.name = Overdrive Disseminator
+block.prog-mats-system-booster.name = Overdrive Diffuser
 block.prog-mats-system-booster.description = Increases the speed of buildings connected to its power network.\nStacks with other overdrive diffusers in the same network.
 block.prog-mats-system-booster.details = Use of this recommends that blocks that do not use power be replaced with ones that do.
 
