Iris + Other small details
Also an internal name change, prepare for broken saves.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -112,6 +112,8 @@ block.prog-mats-froth.name = Froth
 block.prog-mats-froth.description =
 block.prog-mats-bifurcation.name = Bifurcation
 block.prog-mats-bifurcation.description =
+block.prog-mats-iris.name = Iris
+block.prog-mats-iris.description =
 block.prog-mats-bandage.name = Bandage
 block.prog-mats-bandage.description =
 block.prog-mats-mini-overdrive.name = Overclocker
@@ -123,8 +125,8 @@ block.prog-mats-airburst.name = Airburst
 block.prog-mats-airburst.description =
 block.prog-mats-vulcan.name = Vulcan
 block.prog-mats-vulcan.description =
-block.prog-mats-iris.name = Lotus
-block.prog-mats-iris.description =
+block.prog-mats-lotus.name = Lotus
+block.prog-mats-lotus.description =
 block.prog-mats-gravity.name = Gravity
 block.prog-mats-gravity.description =
 block.prog-mats-ambrosia.name = Ambrosia
