A force conduit because why not

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -244,6 +244,11 @@ unit.prog-mats-drone.name = Taurus
 unit.prog-mats-drone.description = Consumes power to transport materials between stations configured in its drone pad. Returns to recharge automatically.\n[red]Dies if it runs out of power.[]
 unit.prog-mats-drone.details = Sprite by Flin.
 
+# Liquid
+
+block.prog-mats-force-conduit.name = Force Conveyor
+block.prog-mats-force-conduit.description =
+
 # Units
 
 block.prog-mats-rejuvenation-beacon.name = Rejuvenation Beacon
