Finally, a use for this thing

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -108,6 +108,8 @@ block.prog-mats-pantheon.details = Sprite by BlueWolf
 ### Modules (Small)
 block.prog-mats-shrapnel.name = Shrapnel
 block.prog-mats-shrapnel.description =
+block.prog-mats-pinpoint.name = Pinpoint
+block.prog-mats-pinpoint.description =
 block.prog-mats-froth.name = Froth
 block.prog-mats-froth.description =
 block.prog-mats-bifurcation.name = Bifurcation
