--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -471,10 +471,13 @@ pm-pickup.full = [red]Not enough capactiy left to pickup the module!
 pm-pickup.toofar = [red]Too far from module!
 pm-size.small.short = S
 pm-size.small.full = Small:
+pm-size.small.amount = [accent]Small Mounts: [lightgray]{0}
 pm-size.medium.short = M
 pm-size.medium.full = Medium:
+pm-size.medium.amount = [accent]Medium Mounts: [lightgray]{0}
 pm-size.large.short = L
 pm-size.large.full = Large:
+pm-size.large.amount = [accent]Large Mounts: [lightgray]{0}
 
 ## Settings
 
