Give modules their own info dialog and stuff
haha bloat go brr

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -97,13 +97,13 @@ block.prog-mats-fissure.details = I'm gonna assume you're surprised that this th
 
 ## Modular Turret
 block.prog-mats-council.name = Council
-block.prog-mats-council.description =
+block.prog-mats-council.description = Small modular turret base. Contains mounts for multiple modules.
 block.prog-mats-council.details = Sprite by BlueWolf
 block.prog-mats-congress.name = Congress
-block.prog-mats-congress.description =
+block.prog-mats-congress.description = Large modular turret base. Contains mounts for many modules.
 block.prog-mats-congress.details = Sprite by BlueWolf
 block.prog-mats-pantheon.name = Pantheon
-block.prog-mats-pantheon.description =
+block.prog-mats-pantheon.description = Massive modular turret base. Contains mounts for an army of modules.
 block.prog-mats-pantheon.details = Sprite by BlueWolf
 ### Modules (Small)
 block.prog-mats-shrapnel.name = Shrapnel
@@ -133,16 +133,20 @@ block.prog-mats-gravity.name = Gravity
 block.prog-mats-gravity.description =
 block.prog-mats-ambrosia.name = Ambrosia
 block.prog-mats-ambrosia.description =
+block.prog-mats-dispel.name = Dispel
+block.prog-mats-dispel.description =
 ### Modules (Large)
 block.prog-mats-rebound.name = Rebound
 block.prog-mats-rebound.description =
 block.prog-mats-rebound.details = Sprite by BlueWolf
 block.prog-mats-trifecta.name = Trifecta
 block.prog-mats-trifecta.description =
+block.prog-mats-ares.name = Ares
+block.prog-mats-ares.description =
 block.prog-mats-jupiter.name = Jupiter
 block.prog-mats-jupiter.description = hehe big bullet go br
-block.prog-mats-dispel.name = Dispel
-block.prog-mats-dispel.description =
+block.prog-mats-dissonance.name = Dissonance
+block.prog-mats-dissonance.description =
 
 ## bUiLdIn A sEnTrY
 block.prog-mats-tinker.name = [gold]Sergeant
@@ -469,14 +473,15 @@ pm-pickup.label = Pick Up Module
 pm-pickup.invalid = [red]Not a payload unit!
 pm-pickup.full = [red]Not enough capactiy left to pickup the module!
 pm-pickup.toofar = [red]Too far from module!
+pm-module-desc = Only functions when placed onto a modular turret base.
 pm-size.small.short = S
-pm-size.small.full = Small:
+pm-size.small.full = Small
 pm-size.small.amount = [accent]Small Mounts: [lightgray]{0}
 pm-size.medium.short = M
-pm-size.medium.full = Medium:
+pm-size.medium.full = Medium
 pm-size.medium.amount = [accent]Medium Mounts: [lightgray]{0}
 pm-size.large.short = L
-pm-size.large.full = Large:
+pm-size.large.full = Large
 pm-size.large.amount = [accent]Large Mounts: [lightgray]{0}
 
 ## Settings
