--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -107,46 +107,46 @@ block.prog-mats-pantheon.description = Massive modular turret base. Contains mou
 block.prog-mats-pantheon.details = Sprite by BlueWolf
 ### Modules (Small)
 block.prog-mats-shrapnel.name = Shrapnel
-block.prog-mats-shrapnel.description =
+block.prog-mats-shrapnel.description = Fires small shotgun blasts at enemies.
 block.prog-mats-pinpoint.name = Pinpoint
-block.prog-mats-pinpoint.description =
+block.prog-mats-pinpoint.description = Fires a spark at enemy units, placing a target on them that makes them take more damage.
 block.prog-mats-froth.name = Froth
-block.prog-mats-froth.description =
+block.prog-mats-froth.description = Fires liquid at enemies. Automatically extinguishes fires when supplied with water.
 block.prog-mats-bifurcation.name = Bifurcation
-block.prog-mats-bifurcation.description =
+block.prog-mats-bifurcation.description = Fires pairs of lightning arcs at ground targets.
 block.prog-mats-iris.name = Iris
-block.prog-mats-iris.description =
+block.prog-mats-iris.description = Fires seeking orbs at enemies.
 block.prog-mats-bandage.name = Bandage
-block.prog-mats-bandage.description =
+block.prog-mats-bandage.description = Repairs the modular turret base over time
 block.prog-mats-mini-overdrive.name = Overclocker
-block.prog-mats-mini-overdrive.description =
+block.prog-mats-mini-overdrive.description = Increases the speed of other modules on the same base.
 ### Modules (Medium)
 block.prog-mats-blunderbuss.name = Blunderbuss
-block.prog-mats-blunderbuss.description =
+block.prog-mats-blunderbuss.description = Fires shotgun blasts at enemies. Can crit for extra damage.
 block.prog-mats-airburst.name = Airburst
-block.prog-mats-airburst.description =
+block.prog-mats-airburst.description = Fires bursts of homing missiles at enemies.
 block.prog-mats-vulcan.name = Vulcan
-block.prog-mats-vulcan.description =
+block.prog-mats-vulcan.description = Fires close-range piercing blasts at nearby enemies and sets them on fire.
 block.prog-mats-lotus.name = Lotus
-block.prog-mats-lotus.description =
+block.prog-mats-lotus.description = Fires bursts of homing lances at enemies.
 block.prog-mats-gravity.name = Gravity
-block.prog-mats-gravity.description =
+block.prog-mats-gravity.description = Fires up to six tractor beams that pulls in air targets, damaging them in the process.
 block.prog-mats-ambrosia.name = Ambrosia
-block.prog-mats-ambrosia.description =
+block.prog-mats-ambrosia.description = Fires healing fields at the closest damaged unit.
 block.prog-mats-dispel.name = Dispel
-block.prog-mats-dispel.description =
+block.prog-mats-dispel.description = Damages and destroys incoming projectiles in a field.
 ### Modules (Large)
 block.prog-mats-rebound.name = Rebound
-block.prog-mats-rebound.description =
+block.prog-mats-rebound.description = Fires circular saws at enemies that boomerang back.
 block.prog-mats-rebound.details = Sprite by BlueWolf
 block.prog-mats-trifecta.name = Trifecta
-block.prog-mats-trifecta.description =
+block.prog-mats-trifecta.description = Fires salvos of three homing rockets at enemies.
 block.prog-mats-ares.name = Ares
-block.prog-mats-ares.description =
+block.prog-mats-ares.description = Fires explosive flame orbs that melt enemies.
 block.prog-mats-jupiter.name = Jupiter
-block.prog-mats-jupiter.description = hehe big bullet go br
+block.prog-mats-jupiter.description = Fires powerful slow-moving orbs at enemies.
 block.prog-mats-dissonance.name = Dissonance
-block.prog-mats-dissonance.description =
+block.prog-mats-dissonance.description = Damages and destroys enemy units in a field.
 
 ## bUiLdIn A sEnTrY
 block.prog-mats-tinker.name = [gold]Sergeant
@@ -473,6 +473,7 @@ pm-pickup.label = Pick Up Module
 pm-pickup.invalid = [red]Not a payload unit!
 pm-pickup.full = [red]Not enough capactiy left to pickup the module!
 pm-pickup.toofar = [red]Too far from module!
+pm-module-single = Only one of these modules can be placed on a single modular turret base.
 pm-module-desc = Only functions when placed onto a modular turret base.
 pm-size.small.short = S
 pm-size.small.full = Small
