Display required input block

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -383,6 +383,8 @@ pm-missing-research = [red]<Research Missing>
 pm-sandbox-disabled = This is disabled to save data.\nEnable it in Progressed Materials settings.
 pm-infinity = Infinity
 
+pm-requires = Requires:
+
 pm-apotheosis-chargers = Chargers: {0}
 pm-apotheosis-none = No chargers connected
 pm-apotheosis-falloff = [stat]{0}%[lightgray] boost falloff
