--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -497,7 +497,7 @@ setting.pm-tesla-range.name = Display Tesla Range When Attacking
 setting.pm-sandbox-everything.name = Enable sandbox turret "Chaos" and sandbox unit "Death"
 setting.pm-sandbox-everything.description = These can take a fair amount of data, especially with many mods enabled.\nRestart required to apply changes.
 setting.pm-farting.name = Replace many sounds with wind3.ogg (extremely funny)
-setting.pm-farting.description = Restart required to apply changes.
+setting.pm-farting.description = Restart required to apply changes.\n[gray](also does other funny things)
 
 ## Mod
 
