It is time for a rename.
Hm if I don't announce this I wonder of anyone will notice.

--- a/.github/workflows/Commit.yml
+++ b/.github/workflows/Commit.yml
@@ -20,5 +20,5 @@ jobs:
     - name: Upload built jar file
       uses: actions/upload-artifact@v2
       with:
-        name: ProgMats (zipped)
+        name: ProgMin (zipped)
         path: build/libs/${{ github.event.repository.name }}.jar
