--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -442,7 +442,7 @@ bullet.pm-multi-splash = [stat]{0}[lightgray]x [stat]{1}[lightgray] area dmg ~ [
 ##Block-specific Info
 
 pm-missing-research = [red]<Research Missing>
-pm-sandbox-disabled = This is disabled to save data.\nEnable it in Progressed Materials settings.
+pm-sandbox-disabled = This is disabled to save data.\nEnable it in Progression Ministry settings.
 pm-infinity = Infinity
 pm-everything = Everything
 
@@ -489,7 +489,7 @@ pm-size.large.amount = [accent]Large Mounts: [lightgray]{0}
 
 ## Settings
 
-setting.pm-title = Progressed Materials
+setting.pm-title = Progression Ministry
 setting.pm-sword-opacity.name = Sword Opacity
 setting.pm-zone-opacity.name = Zone Opacity
 setting.pm-strobespeed.name = Sandbox Block Strobe Speed
@@ -514,4 +514,4 @@ mod.prog-mats-contributor.8 = [#FCC21B]BlueWolf[] (Modular Turret bases and Rebo
 mod.prog-mats-contributor.9 = [#FCC21B]lordReddx[] (RU Translation)
 mod.prog-mats-contributor.10 = Some sounds from [#FCC21B]Freesound[].
 mod.prog-mats-contributor.11 = Anyone I stole code from.
-mod.prog-mats.description = Progressed Materials, but in Java. My main mod, which mostly just adds turrets. I'm just experimenting to see what I can do with the power I hold.\n\nThe name definitely isn't made of the synonyms of "Advance" and "Content".
+mod.prog-mats.description = This mod is mostly just turrets. It's just me having fun with what I can create with the power of Java.
