--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -20,5 +20,5 @@ jobs:
     - name: Upload built jar file
       uses: actions/upload-artifact@v2
       with:
-        name: ProgMats Pull Request (zipped)
+        name: ProgMin Pull Request (zipped)
         path: build/libs/${{ github.event.repository.name }}.jar
