--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -444,6 +444,7 @@ bullet.pm-multi-splash = [stat]{0}[lightgray]x [stat]{1}[lightgray] area dmg ~ [
 pm-missing-research = [red]<Research Missing>
 pm-sandbox-disabled = This is disabled to save data.\nEnable it in Progression Ministry settings.
 pm-infinity = Infinity
+pm-infinite-damage = Infinite damage
 pm-everything = Everything
 
 pm-requires = Requires:
